iptables-save/iptables.conf
# Generated by iptables-save v1.4.12 on Sun Aug 23 20:07:08 2015
*nat
:PREROUTING ACCEPT [7017:464840]
:INPUT ACCEPT [7947:468464]
:OUTPUT ACCEPT [7445:522083]
:POSTROUTING ACCEPT [7445:522083]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 3443
-A PREROUTING -i eth0 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3000
-A PREROUTING -i eth0 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3000
-A PREROUTING -i eth0 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 3443
-A OUTPUT -p tcp -m tcp --sport 443 --dport 3443 -j DNAT --to-destination 127.0.0.1:3443
-A OUTPUT -p tcp -m tcp --sport 443 --dport 3443 -j DNAT --to-destination 0.0.0.0:443
COMMIT
# Completed on Sun Aug 23 20:07:08 2015
# Generated by iptables-save v1.4.12 on Sun Aug 23 20:07:08 2015
*filter
:INPUT DROP [68:7714]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1523:1135565]
-A INPUT -i eth0 -p tcp -m tcp --sport 80 --dport 3000 -j ACCEPT
-A INPUT -s 46.193.143.95/32 -j ACCEPT
-A INPUT -p tcp -j ACCEPT
-A INPUT -s 46.193.140.155/32 -j ACCEPT
COMMIT
# Completed on Sun Aug 23 20:07:08 2015
